align nav correctly, closes #17

--- a/assets/css/index/_gallery.styl
+++ b/assets/css/index/_gallery.styl
@@ -3,7 +3,7 @@
 
   ul
     group()
-    padding: 70px 20px
+    padding: 70px 0
 
     li
       position: relative
